--- a/package.json
+++ b/package.json
@@ -1,5 +1,31 @@
 {
   "name": "AISTT",
   "version": "0.1.0",
-  "main": "main.js"
+  "description": "Android Ios String Translation Tool",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron main.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eefret/AISTT.git"
+  },
+  "keywords": [
+    "Electron",
+    "Android",
+    "ios",
+    "String",
+    "Translation",
+    "Tool"
+  ],
+  "author": "Christopher T. Herrera(eefretsoul@gmail.com), Cristian Gomez(cjgm23@gmail.com)",
+  "license": "N/A",
+  "bugs": {
+    "url": "https://github.com/eefret/AISTT/issues"
+  },
+  "homepage": "https://github.com/eefret/AISTT",
+  "devDependencies": {
+    "electron-prebuilt": "^0.37.0"
+  }
+
 }
