--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "homepage": "https://github.com/eefret/AISTT",
   "devDependencies": {
-    "electron-prebuilt": "^0.37.0",
     "angular": "^1.5.3",
+    "babel-cli": "^6.7.5",
     "bootstrap": "^3.3.6",
+    "electron-prebuilt": "^0.37.0",
     "grunt": "^1.0.0",
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-nodeunit": "~1.0.0",
     "grunt-contrib-uglify": "~1.0.1"
   }
-
 }
